<resources>
    <string name="app_name">Coffee Mix</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="continue_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_account">Do you have an account? Login</string>
    <string name="log_in">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_morning_coffee">Good morning coffee:</string>
    <string name="white_mocha">White Mocha</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="name_coffee">Amir </string>
    <string name="coffee_emoji">☕</string>
    <string name="coffee_image">An image of a cup of coffee</string>
    <string name="heart_icon">A heart shaped icon</string>
    <string name="arrow_icon">An arrow icon</string>
    <string name="star_icon">A star icon</string>
    <string name="guy_icon">An image of a guy beside a cup of coffee</string>
    <string name="no_fav">You don\'t have favourite coffees yet</string>
    <string name="latest">Latest Orders</string>
    <string name="starbucks">Starbucks</string>
    <string name="logo">Coffee shop logo</string>
    <string name="_5_7_2019">5/7/2019</string>
    <string name="_09_18_am">09:18 am</string>
    <string name="your_rate">Your rate:</string>
    <string name="rate">4.0</string>
    <string name="price50">50</string>
    <string name="price30">30</string>
    <string name="price23">23</string>
    <string name="price70">70</string>
    <string name="dunk">Dunkin\' Donuts</string>
    <string name="baskin">Baskin-Robbins</string>
    <string name="kreme">Krispy Kreme</string>
    <string name="cup_icon">an icon of a cup of coffee</string>
    <string name="coffee">Coffee</string>
    <string name="english_tea">English Tea</string>
    <string name="ice_coffee">Ice Coffee</string>
    <string name="browse">Browse all coffee:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cube">A square representing a sugar cube</string>
    <string name="slash">A slash</string>
    <string name="details">Details</string>
    <string name="texxt">On the other hand, we denounce with righteous
        indignation and dislike men who are so beguiled and demoralized by the charms.</string>
    <string name="sugar">Sugar:</string>
    <string name="size">Size:</string>
    <string name="order">Order</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="you_have">You have</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="bin">Bin</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="need_more">Need Some More?</string>
    <string name="add">Add</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="welcome">Welcome!</string>
    <string name="user">Mr. Amir</string>
    <string name="hands_up_emoji">🙌</string>
    <string name="your_address">Your Address:</string>
    <string name="edit"><u>Edit</u></string>
    <string name="save">Save</string>
    <string name="enter_your_address">enter your address</string>
    <string name="your_phone">Your Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="total_money_spent">Total Money Spent</string>
    <string name="price300">300</string>
</resources>