<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:background="@drawable/browse_border">
    <!--layout for the items in the latest orders fragment-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="84dp"
        android:layout_height="66dp"
        android:layout_rowSpan="3"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/starbucks" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/latest_order_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starbucks"
            android:textColor="#000"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_7_2019" />

            <TextView
                android:id="@+id/order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/_09_18_am" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/your_rate"
                android:textColor="#000" />

            <TextView
                android:textSize="15sp"
                android:id="@+id/order_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/star_gold"
                android:text="@string/rate"
                android:drawablePadding="5dp"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_price"
        android:text="@string/price50"
        android:textStyle="bold"
        android:layout_gravity="bottom|end"
        android:textColor="#000"
        android:textSize="21sp"/>
</GridLayout>
