<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#000"
        android:textSize="36sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="#000"
            android:textSize="36sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hands_up_emoji"
            android:textSize="36sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/your_address"
        android:textColor="#000"
        android:textSize="21sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_address"/>
        <TextView
            android:id="@+id/edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:textColor="#333333"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="@string/enter_your_address"
            android:hint="@string/enter_your_address"
            android:inputType="phone"
            android:textColor="#000"/>
        <Button
            android:id="@+id/save_phone"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="#ffffff"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/your_phone"
        android:textColor="#000"
        android:textSize="21sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone"/>
        <TextView
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:textColor="#333333"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <EditText
            android:id="@+id/address_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="@string/enter_your_address"
            android:hint="@string/enter_your_phone_number"
            android:inputType="text"
            android:textColor="#000"/>
        <Button
            android:id="@+id/save_address"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="#ffffff"/>
    </RelativeLayout>

</LinearLayout>