<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_margin="32dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/coffee_guy"
        android:contentDescription="@string/guy_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="21sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:layout_marginBottom="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_border"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="32dp"/>

    <Button
        android:layout_width="112dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="48dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/continue_facebook"
        android:drawableStart="@drawable/icon_facebook"
        android:background="@drawable/fb_button_border"
        android:textColor="@color/fb"
        android:paddingStart="31dp"
        android:paddingEnd="31dp"
        android:textSize="18sp"
        android:layout_marginBottom="48dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#999999"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:id="@+id/open_login"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:layout_weight="4"
            android:textAlignment="center"
            android:textColor="#333333"
            android:textStyle="bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#999999"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>