<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    android:layout_margin="16dp"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_morning"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_coffee"
        android:textSize="36sp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_morning_coffee"
        android:textColor="#333333"
        android:textSize="21sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coffee_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:listitem="@layout/home_coffee_item"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_fav"/>


</LinearLayout>